<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Flat RateTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="ticket_id">Ticket ID:</string>
    <string name="total_hours">Total Hours:</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string-array name="hours_first">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="hours_second">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

</resources>
